--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = vgrocery_mart
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.vgroceryMart
+PRODUCT_BUNDLE_IDENTIFIER = com.vaibhav.epicurease
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
